[package]
name = "async-pool"
version = "1.1.0"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
description = "Statically allocated pool providing a std-like Box, with async functionality."
repository = "https://github.com/danielstuart14/async-pool"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "concurrency", "memory-management"]

[dependencies]
atomic-polyfill = "1.0"
as-slice-01 = { package = "as-slice", version = "0.1.5" }
as-slice-02 = { package = "as-slice", version = "0.2.1" }
stable_deref_trait = { version = "1.2.0", default-features = false }
embassy-sync = "0.6.0"

# Used by async tests and examples
[dev-dependencies]
embassy-executor = { version = "0.6.0", features = [
    "arch-std",
    "executor-thread",
    "integrated-timers",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.3.2", features = ["std"] }
embassy-futures = "0.1.1"
critical-section = { version = "1.1", features = ["std"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []
